# transcribe-openai

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  install.py  main.py  pyproject.toml
.github/workflows/: ci.yml
